--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">&copy; HungNguyenAZ. Source code by <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
 
 			</div>
