--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 							<ul>
 								<li><a href="#whoami">Whoami</a></li>
 								<li><a href="#plgr">Plgr SMP</a></li>
+								<li><a href="plgrflop.html">RGB</a></li>
 							</ul>
 						</nav>
 					</header>
