Add status page button + Fix links typo
skid la chan li

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 							<ul>
 								<li><a href="#whoami">Whoami</a></li>
 								<li><a href="#plgr">Plgr SMP</a></li>
-								<li><a href="plgrflop.html">RGB</a></li>
+								<li><a href="plgrflop.html">RGB Gen</a></li>
+								<li><a href="https://status.2hg.pw/">Status</a></li>
 							</ul>
 						</nav>
 					</header>
@@ -40,7 +41,7 @@
 							<article id="plgr">
 								<h2 class="major">Playground SMP</h2>
 								<p>Minecraft SMP server made by me, powered by PaperMC and Java 18, hosted on Xeon X5670 and 24gb of DDR3 ram.</p>
-								<p>If you are interested, join <a href="dsc.gg/plgr">here</a></p>
+								<p>If you're interested, join <a href="https://discord.com/invite/veZtVDTVWv">here</a></p>
 							</article>
 							<article id="elements">
 								<h2 class="major">Elements</h2>
