--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						<nav>
 							<ul>
 								<li><a href="#whoami">Whoami</a></li>
-								<li><a href="#plgr">Plgr SMP</a></li>
+								<li><a href="#7b27t">Plgr SMP</a></li>
 								<li><a href="plgrflop.html">RGB Gen</a></li>
 								<li><a href="https://status.2hg.pw/">Status</a></li>
 							</ul>
@@ -35,13 +35,13 @@
 
 							<article id="whoami">
 								<h2 class="major">Who am i</h2>
-								<p>My name is Nguyễn Hưng, a normal Vietnamese guy who lives in Ho Chi Minh city. I'm 15 years old and i have interests in stuff about coding because i think it's cool. I have my own <a href="#plgr">Minecraft Server</a>, which runs PaperMC and currently being hosted at your mom's house.</p>
+								<p>My name is Nguyễn Hưng, a normal Vietnamese guy who lives in Ho Chi Minh city. I'm 15 years old and i have interests in stuff about coding because i think it's cool. I have my own <a href="#7b27t">Minecraft Server</a>, which runs NeonPaper (my paper 1.12.2 fork) and currently being hosted at your mom's house.</p>
 							</article>
 
-							<article id="plgr">
-								<h2 class="major">Playground SMP</h2>
-								<p>Minecraft SMP server made by me, powered by PaperMC and Java 18, hosted on Xeon X5670 and 24gb of DDR3 ram.</p>
-								<p>If you're interested, join <a href="https://discord.com/invite/veZtVDTVWv">here</a></p>
+							<article id="7b27t">
+								<h2 class="major">7B27T</h2>
+								<p>Minecraft Anarchy server made by me, powered by NeonPaper and Java 18, hosted on Xeon X5670 and 24gb of DDR3 ram.</p>
+								<p>If you're interested, join <a href="https://discord.gg/heroteam">here</a></p>
 							</article>
 							<article id="elements">
 								<h2 class="major">Elements</h2>
