--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						<nav>
 							<ul>
 								<li><a href="#whoami">Whoami</a></li>
-								<li><a href="#7b27t">Plgr SMP</a></li>
+								<li><a href="#7b27t">7B27T</a></li>
 								<li><a href="plgrflop.html">RGB Gen</a></li>
 								<li><a href="https://status.2hg.pw/">Status</a></li>
 							</ul>
