--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
 						<nav>
 							<ul>
 								<li><a href="#whoami">Whoami</a></li>
-								<li><a href="#7b27t">7B27T</a></li>
 								<li><a href="plgrflop.html">RGB Gen</a></li>
 								<li><a href="https://status.2hg.pw/">Status</a></li>
 							</ul>
@@ -35,14 +34,9 @@
 
 							<article id="whoami">
 								<h2 class="major">Who am i</h2>
-								<p>My name is Nguyễn Hưng, a normal Vietnamese guy who lives in Ho Chi Minh city. I'm 15 years old and i have interests in stuff about coding because i think it's cool. I have my own <a href="#7b27t">Minecraft Server</a>, which runs NeonPaper (my paper 1.12.2 fork) and currently being hosted at your mom's house.</p>
+								<p>My name is Nguyễn Hưng, a normal Vietnamese guy who lives in Ho Chi Minh city. I'm 15 years old and i have interests in stuff about coding because i think it's cool.</p>
 							</article>
-
-							<article id="7b27t">
-								<h2 class="major">7B27T</h2>
-								<p>Minecraft Anarchy server made by me, powered by NeonPaper and Java 18, hosted on Xeon X5670 and 24gb of DDR3 ram.</p>
-								<p>If you're interested, join <a href="https://discord.gg/heroteam">here</a></p>
-							</article>
+						
 							<article id="elements">
 								<h2 class="major">Elements</h2>
 
