--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
 						<nav>
 							<ul>
 								<li><a href="#whoami">Whoami</a></li>
-							</ul>
+                                                                <li><a href="https://www.facebook.com/hungnguyen19807">Facebook</a></li>
+                                                                <li><a href="https://youtube.com/channel/UCoaLrO-DX5QAmtc_3JDdAJQ>Youtube</a></li>
+                                                                <li><a href="https://github.com/hungnguyennaz>Github</a></li>
+                       					</ul>
 						</nav>
 					</header>
 
