--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 							<ul>
 								<li><a href="#whoami">Whoami</a></li>
                                                                 <li><a href="https://www.facebook.com/hungnguyen19807">Facebook</a></li>
-                                                                <li><a href="https://youtube.com/channel/UCoaLrO-DX5QAmtc_3JDdAJQ>Youtube</a></li>
-                                                                <li><a href="https://github.com/hungnguyennaz>Github</a></li>
+                                                                <li><a href="https://youtube.com/channel/UCoaLrO-DX5QAmtc_3JDdAJQ">Youtube</a></li>
+                                                                <li><a href="https://github.com/hungnguyennaz">Github</a></li>
                        					</ul>
 						</nav>
 					</header>
