--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					<div id="main">
 
 							<article id="whoami">
-								<h2 class="major">Who am i</h2>
+								<h2 class="major">Who am i ?</h2>
 								<p>My name is Nguyễn Hưng, a normal Vietnamese guy who lives in Ho Chi Minh city. I'm 15 years old and i have interests in stuff about coding because i think it's cool.</p>
 							</article>
 						
